@@ -4,6 +4,10 @@ Change History
 1.7b2 Unreleased
 ----------------
 
+- Drag and drop stopped working in 4.1 due to loss of id context in
+  placeholder. Fixed.
+  [smcmahon]
+
 - Previous fix to duplicate action adapters did not preserve order of
   execution. Fixed.
   [smcmahon]
